--- a/Controls/Map.xaml
+++ b/Controls/Map.xaml
@@ -161,6 +161,7 @@
             <maps:MapElementsLayer x:Name="DifferenceLayer" Visible="{x:Bind Mode=OneWay, Path=ViewModel.TrackVisible}" />
             <maps:MapElementsLayer x:Name="PoisLayer" Visible="{x:Bind Mode=OneWay, Path=ViewModel.PoisVisible}" />
             <maps:MapElementsLayer x:Name="InfoLayer" Visible="{x:Bind Mode=OneWay, Path=ViewModel.InfoVisible}" />
+            <maps:MapElementsLayer x:Name="TrainLayer" />
         </maps:MapControl.Resources>
 
         <controls:PointerPanel
