--- a/cycloid.UWP/Controls/InfoToggleButton.xaml
+++ b/cycloid.UWP/Controls/InfoToggleButton.xaml
@@ -44,6 +44,10 @@
                         Tag="{x:Bind Mode=OneTime, Path=info:InfoCategory.Shop}" />
                     <CheckBox
                         Margin="10,0,0,0"
+                        Content="Sleep"
+                        Tag="{x:Bind Mode=OneTime, Path=info:InfoCategory.Sleep}" />
+                    <CheckBox
+                        Margin="10,0,0,0"
                         Content="Section"
                         Tag="{x:Bind Mode=OneTime, Path=info:InfoCategory.Section}" />
                 </StackPanel>
