--- a/cycloid.UWP/Controls/StreetView.xaml
+++ b/cycloid.UWP/Controls/StreetView.xaml
@@ -8,8 +8,11 @@
     xmlns:cycloid="using:cycloid"
     xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
     xmlns:labs="using:CommunityToolkit.Labs.WinUI"
-    xmlns:ui="using:CommunityToolkit.WinUI"
+    xmlns:mux="using:Microsoft.UI.Xaml.Controls"
+    xmlns:ui="using:CommunityToolkit.WinUI">
+    <!--
     Visibility="{x:Bind Mode=OneWay, Path=cycloid:Convert.VisibleIfValid(Point)}">
+    -->
 
     <controls:TrackPointControl.Resources>
         <labs:TransitionHelper x:Key="Transition">
@@ -27,30 +30,10 @@
             x:Name="Expanded"
             labs:TransitionHelper.Id="root"
             Visibility="Collapsed">
-            <Grid>
-                <Image
-                    x:Name="Image"
-                    Width="{x:Bind Mode=OneWay, Path=ImageWidth}"
-                    Height="{x:Bind Mode=OneWay, Path=ImageHeight}"
-                    ImageFailed="Image_ImageFailed"
-                    ImageOpened="Image_ImageOpened">
-                    <Image.Source>
-                        <BitmapImage x:Name="ImageSource" />
-                    </Image.Source>
-                </Image>
-                <Slider
-                    Margin="10,0,10,0"
-                    HorizontalAlignment="Stretch"
-                    VerticalAlignment="Bottom"
-                    Maximum="170"
-                    Minimum="-170"
-                    Opacity=".5"
-                    SmallChange="10"
-                    SnapsTo="StepValues"
-                    StepFrequency="10"
-                    Value="{x:Bind Mode=TwoWay, Path=HeadingOffset}" />
+            <Grid Margin="0 10 0 0">
+                <mux:WebView2 x:Name="WebView" Width="480" Height="320" />
                 <Grid
-                    Margin="10"
+                    Margin="8"
                     HorizontalAlignment="Right"
                     VerticalAlignment="Top">
                     <Border
@@ -99,15 +82,6 @@
                 </Button>
             </Grid>
         </controls:MapControlBorder>
-
-        <Ellipse
-            Width="5"
-            Height="5"
-            Margin="5"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            Fill="Red"
-            Visibility="{x:Bind Mode=OneWay, Path=RequestPending}" />
 
     </Grid>
 
