--- a/cycloid.UWP/Controls/StreetView.xaml
+++ b/cycloid.UWP/Controls/StreetView.xaml
@@ -30,8 +30,8 @@
             x:Name="Expanded"
             labs:TransitionHelper.Id="root"
             Visibility="Collapsed">
-            <Grid Margin="0 10 0 0">
-                <mux:WebView2 x:Name="WebView" Width="480" Height="320" />
+            <Grid x:Name="Root" Margin="0 10 0 0">
+                <mux:WebView2 x:Name="WebView" Background="Transparent" Visibility="{x:Bind Mode=OneWay, Path=cycloid:Convert.VisibleIfValid(Point)}" />
                 <Grid
                     Margin="8"
                     HorizontalAlignment="Right"
