--- a/cycloid.UWP/Controls/Map.xaml
+++ b/cycloid.UWP/Controls/Map.xaml
@@ -195,6 +195,7 @@
         <!--  HoverPoint  -->
         <Border
             ContextRequested="PointerPanel_ContextRequested"
+            Tapped="PointerPanel_Tapped"
             maps:MapControl.Location="{x:Bind Mode=OneWay, Path=cycloid:Convert.ToGeopoint(ViewModel.HoverPoint)}"
             maps:MapControl.NormalizedAnchorPoint=".5 .5"
             UseLayoutRounding="False"
