--- a/cycloid.UWP/Controls/ProfileHoverPointValues.xaml
+++ b/cycloid.UWP/Controls/ProfileHoverPointValues.xaml
@@ -57,7 +57,7 @@
                 Grid.ColumnSpan="3"
                 HorizontalAlignment="Center"
                 Text="{x:Bind Mode=OneWay, Path=cycloid:Convert.Surface(Point.Surface)}"
-                Visibility="{x:Bind Mode=OneWay, Path=cycloid:Convert.SurfaceToVisibilityy(Point.Surface)}" />
+                Visibility="{x:Bind Mode=OneWay, Path=cycloid:Convert.SurfaceToVisibility(Point.Surface)}" />
 
         </Grid>
 
