--- a/cycloid.UWP/MainPage.xaml
+++ b/cycloid.UWP/MainPage.xaml
@@ -665,7 +665,8 @@
                 Margin="10"
                 HorizontalAlignment="Right"
                 VerticalAlignment="Bottom"
-                Point="{x:Bind Mode=OneWay, Path=ViewModel.CurrentPoint}" />
+                Point="{x:Bind Mode=OneWay, Path=ViewModel.CurrentPoint}"
+                Visibility="{x:Bind Mode=OneWay, Path=cycloid:Convert.VisibleIfNot(ViewModel.IsEditMode)}"/>
 
             <controls:Bing
                 Margin="10"
