--- a/cycloid.UWP/MainPage.xaml
+++ b/cycloid.UWP/MainPage.xaml
@@ -4,6 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:cycloid.Controls"
     xmlns:cycloid="using:cycloid"
+    xmlns:ic="using:FluentIcons.Uwp"
     xmlns:mux="using:Microsoft.UI.Xaml.Controls"
     xmlns:ui="using:CommunityToolkit.WinUI"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
@@ -622,11 +623,17 @@
                             </Grid.RowDefinitions>
                             <StackPanel Orientation="Horizontal">
                                 <Button Content="{ui:SymbolIcon Symbol=Previous}" />
-                                <Button Content="{ui:FontIcon FontFamily='FluentSystemIcons-Regular', FontSize=18, Glyph=}" />
-                                <Button Content="{ui:SymbolIcon Symbol=Play}" Command="{x:Bind Mode=OneTime, Path=ViewModel.PlayCommand}" Visibility="{x:Bind Mode=OneWay, Path=cycloid:Convert.VisibleIfNot(ViewModel.IsPlaying)}" />
-                                <Button Content="{ui:SymbolIcon Symbol=Pause}" Command="{x:Bind Mode=OneTime, Path=ViewModel.PlayCancelCommand}" Visibility="{x:Bind Mode=OneWay, Path=cycloid:Convert.VisibleIf(ViewModel.IsPlaying)}" />
-                                <Button Content="{ui:FontIcon FontFamily='FluentSystemIcons-Regular', FontSize=24, Glyph=}" />
-                                <Button Content="{ui:SymbolIcon Symbol=Next}" />
+                                <Button Content="{ic:SymbolIcon Symbol=SkipBack10}" />
+                                <Button
+                                    Command="{x:Bind Mode=OneTime, Path=ViewModel.PlayCommand}"
+                                    Content="{ui:SymbolIcon Symbol=Play}"
+                                    Visibility="{x:Bind Mode=OneWay, Path=cycloid:Convert.VisibleIfNot(ViewModel.IsPlaying)}" />
+                                <Button
+                                    Command="{x:Bind Mode=OneTime, Path=ViewModel.PlayCancelCommand}"
+                                    Content="{ui:SymbolIcon Symbol=Pause}"
+                                    Visibility="{x:Bind Mode=OneWay, Path=cycloid:Convert.VisibleIf(ViewModel.IsPlaying)}" />
+                                <Button Content="{ic:SymbolIcon Symbol=SkipForward10}" />
+                                <Button Content="{ic:SymbolIcon Symbol=SkipForward30}" />
                             </StackPanel>
                             <mux:ProgressBar Grid.Row="1" />
                         </Grid>
