--- a/cycloid.UWP/MainPage.xaml
+++ b/cycloid.UWP/MainPage.xaml
@@ -481,10 +481,12 @@
                                     HorizontalTextAlignment="Center"
                                     Text="{x:Bind Mode=OneWay, Path=ViewModel.CompareSessionState}" />
                                 <ListView
+                                    x:Name="Differences"
                                     Grid.Row="5"
                                     ItemsSource="{x:Bind Mode=OneWay, Path=ViewModel.Track.CompareSession.Differences}"
                                     ScrollViewer.VerticalScrollBarVisibility="Auto"
                                     ScrollViewer.VerticalScrollMode="Auto"
+                                    SelectedItem="{x:Bind Mode=TwoWay, Path=ViewModel.CurrentDifference}"
                                     SelectionChanged="Differences_SelectionChanged">
                                     <ListView.ItemTemplate>
                                         <DataTemplate x:DataType="cycloid:TrackDifference">
