--- a/cycloid.UWP/App.xaml
+++ b/cycloid.UWP/App.xaml
@@ -2,7 +2,8 @@
     x:Class="cycloid.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mux="using:Microsoft.UI.Xaml.Controls">
+    xmlns:mux="using:Microsoft.UI.Xaml.Controls"
+    RequestedTheme="Dark">
 
     <Application.Resources>
         <mux:XamlControlsResources ControlsResourcesVersion="Version2">
