--- a/cycloid/App.xaml
+++ b/cycloid/App.xaml
@@ -2,8 +2,7 @@
     x:Class="cycloid.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mux="using:Microsoft.UI.Xaml.Controls"
-    RequestedTheme="Dark">
+    xmlns:mux="using:Microsoft.UI.Xaml.Controls">
 
     <Application.Resources>
         <mux:XamlControlsResources ControlsResourcesVersion="Version2">
